--- a/bread/toc.yml
+++ b/bread/toc.yml
@@ -378,7 +378,7 @@
           topicHref: /azure/machine-learning/team-data-science-process/overview
         - name: Virtuell dator för datavetenskap
           tocHref: /azure/machine-learning/data-science-virtual-machine
-          topicHref: /azure/machine-learning/data-science-virtual-machine/virtual-machine-overview
+          topicHref: /azure/machine-learning/data-science-virtual-machine/
     - name: Marketplace-konsument
       tocHref: /azure/marketplace-consumer/
       topicHref: /azure/marketplace-consumer/
@@ -521,6 +521,9 @@
         - name: Köer
           tocHref: /azure/storage/queues/
           topicHref: /azure/storage/queues/storage-queues-introduction
+        - name: Tabeller
+          tocHref: /azure/storage/tables/
+          topicHref: /azure/storage/tables/table-storage-overview
     - name: StorSimple
       tocHref: /azure/storsimple/
       topicHref: /azure/storsimple/
