--- a/articles/storage/index.yml
+++ b/articles/storage/index.yml
@@ -2,8 +2,8 @@
 documentType: LandingData
 title: Azure Storage-dokumentation
 metadata:
-  title: "Dokumentation om Azure Storage – Självstudier, API-referens | Microsoft Docs"
-  description: "Azure Storage är en Microsoft-hanterad molntjänst som tillhandahåller lagring som är mycket tillgänglig, säker, beständig, skalbar och redundant. Azure Storage består av Blob Storage, File Storage och Queue Storage."
+  title: Dokumentation om Azure Storage – Självstudier, API-referens | Microsoft Docs
+  description: Azure Storage är en Microsoft-hanterad molntjänst som tillhandahåller lagring som är mycket tillgänglig, säker, beständig, skalbar och redundant. Azure Storage består av Blob Storage, File Storage och Queue Storage.
   services: storage
   author: tamram
   manager: jeconnoc
@@ -13,18 +13,19 @@ metadata:
   ms.topic: landing-page
   ms.date: 12/08/2017
   ms.author: tamram
-  ms.openlocfilehash: f19fc44c2d8f4a8af7f757983020eaee6f94b241
-  ms.sourcegitcommit: 562a537ed9b96c9116c504738414e5d8c0fd53b1
+  ms.openlocfilehash: de0672c3f4f06dd20081e401121f1cbbe2d77c9f
+  ms.sourcegitcommit: 6116082991b98c8ee7a3ab0927cf588c3972eeaa
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 01/12/2018
+  ms.lasthandoff: 06/05/2018
+  ms.locfileid: "34763178"
 abstract:
-  description: "Microsoft Azure Storage är en Microsoft-hanterad molntjänst som tillhandahåller lagring som är mycket tillgänglig, säker, beständig, skalbar och redundant. Azure Storage består av Blob Storage, File Storage och Queue Storage.  Lär dig att utnyttja Azure Storage i dina program med våra snabbstarter och självstudier."
+  description: Microsoft Azure Storage är en Microsoft-hanterad molntjänst som tillhandahåller lagring som är mycket tillgänglig, säker, beständig, skalbar och redundant. Azure Storage består av Blob Storage, File Storage och Queue Storage.  Lär dig att utnyttja Azure Storage i dina program med våra snabbstarter och självstudier.
 sections:
-- title: "Snabbstarter på 5 minuter"
+- title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
-    text: "Lär dig att arbeta med Azure Storage med hjälp av dessa snabbstarter."
+    text: Lär dig att arbeta med Azure Storage med hjälp av dessa snabbstarter.
   - type: table
     style: dataMatrix
     columns:
@@ -64,54 +65,54 @@ sections:
       - href: /azure/storage/blobs/storage-quickstart-blobs-java
       - href: /azure/storage/blobs/storage-quickstart-blobs-python
       - href: /azure/storage/blobs/storage-quickstart-blobs-nodejs
-- title: "Stegvisa självstudier"
+- title: Stegvisa självstudier
   items:
   - type: paragraph
-    text: "Lär dig att överföra och bearbeta bilddata i molnet."
+    text: Lär dig att överföra och bearbeta bilddata i molnet.
   - type: list
     style: unordered
     items:
-    - html: "<a href=\"/azure/storage/blobs/storage-upload-process-images\">Ladda upp och hämta avbildningsdata i molnet</a>"
-    - html: "<a href=\"/azure/event-grid/resize-images-on-storage-blob-upload-event?toc=%2fazure%2fstorage%2fblobs%2ftoc.json\">Utlösa Azure Functions för att bearbeta blobar</a>"
+    - html: <a href="/azure/storage/blobs/storage-upload-process-images">Ladda upp och hämta avbildningsdata i molnet</a>
+    - html: <a href="/azure/event-grid/resize-images-on-storage-blob-upload-event?toc=%2fazure%2fstorage%2fblobs%2ftoc.json">Utlösa Azure Functions för att bearbeta blobar</a>
     - html: <a href="/azure/storage/blobs/storage-secure-access-application">Skydda programdata</a>
-    - html: "<a href=\"/azure/storage/blobs/storage-monitor-troubleshoot-storage-application\">Övervaka och felsöka lagring</a>"
+    - html: <a href="/azure/storage/blobs/storage-monitor-troubleshoot-storage-application">Övervaka och felsöka lagring</a>
   - type: paragraph
-    text: "Lär dig att utforma ditt program för hög tillgänglighet i Azure Storage."
+    text: Lär dig att utforma ditt program för hög tillgänglighet i Azure Storage.
   - type: list
     style: unordered
     items:
-    - html: "<a href=\"/azure/storage/blobs/storage-create-geo-redundant-storage\">Skapa hög tillgänglighet för dina programdata</a>"
-    - html: "<a href=\"/azure/storage/blobs/storage-simulate-failure-ragrs-account-app\">Simulera ett fel vid läsåtkomst till redundant lagring</a>"
+    - html: <a href="/azure/storage/blobs/storage-create-geo-redundant-storage">Skapa hög tillgänglighet för dina programdata</a>
+    - html: <a href="/azure/storage/blobs/storage-simulate-failure-ragrs-account-app">Simulera ett fel vid läsåtkomst till redundant lagring</a>
   - type: paragraph
-    text: "Lär dig hur du söker efter ostrukturerade data i Azure Storage."
+    text: Lär dig hur du söker efter ostrukturerade data i Azure Storage.
   - type: list
     style: unordered
     items:
-    - html: "<a href=\"/azure/storage/blobs/storage-unstructured-search\">Söka efter ostrukturerade data i molnlagring</a>"
+    - html: <a href="/azure/storage/blobs/storage-unstructured-search">Söka efter ostrukturerade data i molnlagring</a>
 - title: Exempel
   items:
   - type: paragraph
-    text: "Hitta skript för vanliga hanteringsuppgifter."
+    text: Hitta skript för vanliga hanteringsuppgifter.
   - type: list
     style: unordered
     className: spaced noBullet
     items:
-    - html: ".NET &#58; <a href=\"https://azure.microsoft.com/resources/samples/?service=storage&term=blob&sort=0&platform=dotnet\">blobar</a> | <a     href=\"https://azure.microsoft.com/resources/samples/?service=storage&term=file&sort=0&platform=dotnet\">filer</a> | <a href=\"https://azure.microsoft.com/resources/samples/?service=storage&term=queue&sort=0&platform=dotnet\">köer</a>"
-    - html: "Java &#58; <a href=\"https://azure.microsoft.com/resources/samples/?service=storage&term=blob&sort=0&platform=java\">blobar</a> | <a href=\"https://azure.microsoft.com/resources/samples/?service=storage&term=file&sort=0&platform=java\">filer</a> | <a href=\"https://azure.microsoft.com/resources/samples/?service=storage&term=queue&sort=0&platform=java\">köer</a>"
+    - html: .NET &#58; <a href="https://azure.microsoft.com/resources/samples/?service=storage&term=blob&sort=0&platform=dotnet">blobar</a> | <a     href="https://azure.microsoft.com/resources/samples/?service=storage&term=file&sort=0&platform=dotnet">filer</a> | <a href="https://azure.microsoft.com/resources/samples/?service=storage&term=queue&sort=0&platform=dotnet">köer</a>
+    - html: Java &#58; <a href="https://azure.microsoft.com/resources/samples/?service=storage&term=blob&sort=0&platform=java">blobar</a> | <a href="https://azure.microsoft.com/resources/samples/?service=storage&term=file&sort=0&platform=java">filer</a> | <a href="https://azure.microsoft.com/resources/samples/?service=storage&term=queue&sort=0&platform=java">köer</a>
     - html: <a href="/azure/storage/blobs/storage-samples-blobs-powershell">Azure PowerShell</a>
     - html: <a href="/azure/storage/blobs/storage-samples-blobs-cli">Azure CLI</a>
-- title: "Kostnadsfri videoutbildning för Pluralsight"
+- title: Kostnadsfri videoutbildning för Pluralsight
   items:
   - type: list
     style: cards
     className: cardsFTitle
     items:
-    - title: "Utveckla med .NET för Azure"
+    - title: Utveckla med .NET för Azure
       href: https://app.pluralsight.com/library/courses/developing-dotnet-microsoft-azure-getting-started/table-of-contents
       image:
         src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
         href: https://app.pluralsight.com/library/courses/developing-dotnet-microsoft-azure-getting-started/table-of-contents
-    - title: "Utveckla med Node.js för Azure"
+    - title: Utveckla med Node.js för Azure
       href: https://app.pluralsight.com/library/courses/developing-nodejs-microsoft-azure-getting-started/table-of-contents
       image:
         src: https://docs.microsoft.com/media/logos/logo_pluralsight.svg
@@ -124,7 +125,7 @@ sections:
     items:
     - title: Kommandorad
       html: <p><a href="/powershell/storage">PowerShell</a></p><p><a href="/cli/azure/storage">Azure CLI</a></p>
-    - title: "Språk"
-      html: <p><a href="/java/api/">Java</a></p><p><a href="http://azure.github.io/azure-storage-node">Node.js</a></p><p><a href="http://azure.github.io/azure-storage-php/">PHP</a></p><p><a href="http://azure.github.io/azure-storage-ruby">Ruby</a></p><p><a href="https://azure-storage.readthedocs.io/en/latest/index.html">Python</a></p><p><a href="http://azure.github.io/azure-storage-cpp">C++</a></p><p><a href="https://github.com/Azure/azure-storage-ios">iOS</a></p><p><a href="http://azure.github.io/azure-storage-android">Android</a></p>
+    - title: Språk
+      html: <p><a href="/dotnet/api/">.NET</a></p><p><a href="/java/api/">Java</a></p><p><a href="/javascript/api/overview/azure/">Node.js</a></p><p><a href="http://azure.github.io/azure-storage-php/">PHP</a></p><p><a href="http://azure.github.io/azure-storage-ruby">Ruby</a></p><p><a href="https://azure-storage.readthedocs.io/en/latest/index.html">Python</a></p><p><a href="http://azure.github.io/azure-storage-cpp">C++</a></p><p><a href="https://github.com/Azure/azure-storage-ios">iOS</a></p><p><a href="http://azure.github.io/azure-storage-android">Android</a></p>
     - title: REST
-      html: "<p><a href=\"/rest/api/storageservices\">Blobar, köer, tabeller och filer</a></p><p><a href=\"/rest/api/storagerp\">Resursprovider</a></p><p><a href=\"/rest/api/storageimportexport\">Import/export</a></p>"
+      html: <p><a href="/rest/api/storageservices">Blobar, köer, tabeller och filer</a></p><p><a href="/rest/api/storagerp">Resursprovider</a></p><p><a href="/rest/api/storageimportexport">Import/export</a></p>
