--- a/articles/monitoring/toc.yml
+++ b/articles/monitoring/toc.yml
@@ -66,14 +66,12 @@
           href: ../log-analytics/log-analytics-vmware.md?toc=%2fazure%2fmonitoring%2ftoc.json
         - name: Tjänstkarta
           items:
-            - name: Genomgång
-              href: ../operations-management-suite/operations-management-suite-walkthrough-servicemap.md?toc=%2fazure%2fmonitoring%2ftoc.json
             - name: Användning
-              href: ../operations-management-suite/operations-management-suite-service-map.md?toc=%2fazure%2fmonitoring%2ftoc.json
+              href: monitoring-service-map.md
             - name: Konfigurera
-              href: ../operations-management-suite/operations-management-suite-service-map-configure.md?toc=%2fazure%2fmonitoring%2ftoc.json
+              href: monitoring-service-map-configure.md
             - name: Integration med Operations Manager
-              href: ../operations-management-suite/operations-management-suite-service-map-scom.md?toc=%2fazure%2fmonitoring%2ftoc.json
+              href: monitoring-service-map-scom.md
     - name: Andra resurser
       items:
         - name: Utvärdering av AD-hälsa
