--- a/articles/mysql/index.yml
+++ b/articles/mysql/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
 documentType: LandingData
-title: "Azure Database för MySQL-dokumentation"
+title: Azure Database för MySQL-dokumentation
 metadata:
   document_id: 8d915ae6-9101-ad37-0736-3eaa59c2dd34
-  title: "Dokumentation om Azure MYSQL – självstudier, API-referens | Microsoft Docs"
-  description: "Azure Database för MySQL är en relationsdatabastjänst i Microsoft-molnet som är utformad för utvecklare baserat på MySQL-databasmotorn för öppen källkod."
+  title: Dokumentation om Azure MYSQL – självstudier, API-referens | Microsoft Docs
+  description: Azure Database för MySQL är en relationsdatabastjänst i Microsoft-molnet som är utformad för utvecklare baserat på MySQL-databasmotorn för öppen källkod.
   services: mysql
   author: czeumault
   manager: carolz
@@ -19,13 +19,14 @@ metadata:
   ms.translationtype: HT
   ms.contentlocale: sv-SE
   ms.lasthandoff: 10/11/2017
+  ms.locfileid: "23070811"
 abstract:
-  description: "Azure Database för MySQL är en relationsdatabastjänst baserad på MySQL-servermotorn för öppen källkod.  Det är en fullständigt hanterad databas som tjänst, för hantering av verksamhetskritisk arbetsbelastning med förutsägbara prestanda och dynamisk skalbarhet. Utveckla program med Azure Database för MySQL och använd valfria verktyg för öppen källkod och plattform. Lär dig hur du använder Azure Database för MySQL med våra snabbstarter, självstudier och exempel."
+  description: Azure Database för MySQL är en relationsdatabastjänst baserad på MySQL-servermotorn för öppen källkod.  Det är en fullständigt hanterad databas som tjänst, för hantering av verksamhetskritisk arbetsbelastning med förutsägbara prestanda och dynamisk skalbarhet. Utveckla program med Azure Database för MySQL och använd valfria verktyg för öppen källkod och plattform. Lär dig hur du använder Azure Database för MySQL med våra snabbstarter, självstudier och exempel.
 sections:
-- title: "Snabbstarter på 5 minuter"
+- title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
-    text: "Lär dig hur du skapar en MySQL-databas på Azure med hjälp av:"
+    text: 'Lär dig hur du skapar en MySQL-databas på Azure med hjälp av:'
   - type: list
     style: icon48
     items:
@@ -37,15 +38,15 @@ sections:
         src: /azure/virtual-machines/linux/media/index/cli.svg
       text: Azure CLI
       href: /azure/mysql/quickstart-create-mysql-server-database-using-azure-cli
-- title: "Steg för steg-självstudier"
+- title: Steg för steg-självstudier
   items:
   - type: paragraph
-    text: "Lär dig hur du utformar din databas och utvecklar appar:"
+    text: 'Lär dig hur du utformar din databas och utvecklar appar:'
   - type: list
     style: ordered
     items:
     - html: Utforma en databas&#58; <a href="/azure/mysql/tutorial-design-database-using-portal">Azure Portal</a> | <a href="/azure/mysql/tutorial-design-database-using-cli">Azure CLI</a>
-    - html: "Skapa en webbapp &#58; <a href=\"https://portal.azure.com/#create/hub\">Wordpress – Portal</a> | <a href=\"../app-service-web/app-service-web-tutorial-php-mysql.md?toc=%2fazure%2fmysql%2ftoc.json\">PHP – Azure CLI</a>"
+    - html: Skapa en webbapp &#58; <a href="https://portal.azure.com/#create/hub">Wordpress – Portal</a> | <a href="../app-service-web/app-service-web-tutorial-php-mysql.md?toc=%2fazure%2fmysql%2ftoc.json">PHP – Azure CLI</a>
 - title: Referens
   items:
   - type: list
