--- a/articles/postgresql/index.yml
+++ b/articles/postgresql/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
 documentType: LandingData
-title: "Azure Database för PostgreSQL-dokumentation"
+title: Azure Database för PostgreSQL-dokumentation
 metadata:
   document_id: c0fe8cd3-35da-e3e5-718e-8f3cf2f87f34
-  title: "Dokumentation om Azure PostgreSQL – självstudier, API-referens"
-  description: "Azure Database för PostgreSQL är en relationsdatabastjänst i Microsoft-molnet som är utformad för utvecklare baserat på PostgreSQL-databasmotorn för öppen källkod."
+  title: Dokumentation om Azure PostgreSQL – självstudier, API-referens
+  description: Azure Database för PostgreSQL är en relationsdatabastjänst i Microsoft-molnet som är utformad för utvecklare baserat på PostgreSQL-databasmotorn för öppen källkod.
   services: postgresql
   author: czeumault
   manager: carolz
@@ -19,13 +19,14 @@ metadata:
   ms.translationtype: HT
   ms.contentlocale: sv-SE
   ms.lasthandoff: 01/12/2018
+  ms.locfileid: "27784834"
 abstract:
-  description: "Azure Database för PostgreSQL är en relationsdatabastjänst baserad på Postgres-databasmotorn för öppen källkod.  Det är en fullständigt hanterad databas som tjänst, för hantering av verksamhetskritiska arbetsbelastningar med förutsägbara prestanda, säkerhet, hög tillgänglighet och dynamisk skalbarhet.  Utveckla program med Azure Database för PostgreSQL och använd valfria verktyg för öppen källkod och plattform.  Lär dig hur du använder Azure Database med våra snabbstarter, självstudier och exempel."
+  description: Azure Database för PostgreSQL är en relationsdatabastjänst baserad på Postgres-databasmotorn för öppen källkod.  Det är en fullständigt hanterad databas som tjänst, för hantering av verksamhetskritiska arbetsbelastningar med förutsägbara prestanda, säkerhet, hög tillgänglighet och dynamisk skalbarhet.  Utveckla program med Azure Database för PostgreSQL och använd valfria verktyg för öppen källkod och plattform.  Lär dig hur du använder Azure Database med våra snabbstarter, självstudier och exempel.
 sections:
-- title: "Snabbstarter på 5 minuter"
+- title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
-    text: "Lär dig att skapa en PostgreSQL-databas med:"
+    text: 'Lär dig att skapa en PostgreSQL-databas med:'
   - type: list
     style: icon48
     items:
@@ -37,10 +38,10 @@ sections:
         src: https://docs.microsoft.com/azure/sql-database/media/index/cli.svg
       text: Azure CLI
       href: /azure/postgresql/quickstart-create-server-database-azure-cli
-- title: "Steg för steg-självstudier"
+- title: Steg för steg-självstudier
   items:
   - type: paragraph
-    text: "Lär dig att:"
+    text: 'Lär dig att:'
   - type: list
     style: ordered
     items:
@@ -49,7 +50,7 @@ sections:
 - title: Exempel
   items:
   - type: paragraph
-    text: "Hitta skript för att hantera vanliga uppgifter."
+    text: Hitta skript för att hantera vanliga uppgifter.
   - type: list
     style: unordered
     className: spaced noBullet
