--- a/articles/security-center/index.yml
+++ b/articles/security-center/index.yml
@@ -2,7 +2,7 @@
 documentType: LandingData
 title: Dokumentation om Azure Security Center
 metadata:
-  title: "Dokumentation om Azure Security Center – Självstudier, API-referens | Microsoft Doc"
+  title: Dokumentation om Azure Security Center – Självstudier, API-referens | Microsoft Doc
   meta.description: Azure Security Center provides unified security management and advanced threat protection across hybrid cloud workloads. Learn how to get started with Security Center, apply security policies across your workloads, limit your exposure to threats, and detect and respond to attacks with our quickstarts and tutorials..
   services: security-center
   author: cmcclister
@@ -18,13 +18,14 @@ metadata:
   ms.translationtype: HT
   ms.contentlocale: sv-SE
   ms.lasthandoff: 01/10/2018
+  ms.locfileid: "27741107"
 abstract:
-  description: "Azure Security Center erbjuder enhetlig säkerhetshantering och avancerat skydd mot hot i olika hybridmolnarbetsbelastningar. Lär dig att komma igång med Security Center, tillämpa säkerhetsprinciper i arbetsbelastningarna, begränsa hotexponeringen och identifiera och åtgärda attacker med hjälp av våra snabbstarter och självstudier."
+  description: Azure Security Center erbjuder enhetlig säkerhetshantering och avancerat skydd mot hot i olika hybridmolnarbetsbelastningar. Lär dig att komma igång med Security Center, tillämpa säkerhetsprinciper i arbetsbelastningarna, begränsa hotexponeringen och identifiera och åtgärda attacker med hjälp av våra snabbstarter och självstudier.
 sections:
-- title: "Snabbstarter på 5 minuter"
+- title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
-    text: "Lär dig att integrera virtuella datorer och datorer till Security Center och ansluta dina säkerhetslösningar."
+    text: Lär dig att integrera virtuella datorer och datorer till Security Center och ansluta dina säkerhetslösningar.
   - type: list
     style: icon48
     items:
@@ -42,18 +43,18 @@ sections:
       href: /azure/security-center/quick-onboard-linux-computer
     - image:
         src: /media/common/i_multi-connect.svg
-      text: "Ansluta säkerhetslösningar"
+      text: Ansluta säkerhetslösningar
       href: /azure/security-center/quick-security-solutions
-- title: "Steg för steg-självstudier"
+- title: Steg för steg-självstudier
   items:
   - type: paragraph
-    text: "Lär dig att definiera säkerhetsprinciper, skydda dina resurser mot skadliga aktiviteter och åtgärda säkerhetsaviseringar och incidenter."
+    text: Lär dig att definiera säkerhetsprinciper, skydda dina resurser mot skadliga aktiviteter och åtgärda säkerhetsaviseringar och incidenter.
   - type: list
     style: ordered
     items:
-    - html: "<a href=\"/azure/security-center/tutorial-security-policy\">Definiera och utvärdera säkerhetsprinciper</a>"
+    - html: <a href="/azure/security-center/tutorial-security-policy">Definiera och utvärdera säkerhetsprinciper</a>
     - html: <a href="/azure/security-center/tutorial-protect-resources">Skydda dina resurser</a>
-    - html: "<a href=\"/azure/security-center/tutorial-security-incident\">Reagera på säkerhetsincidenter</a>"
+    - html: <a href="/azure/security-center/tutorial-security-incident">Reagera på säkerhetsincidenter</a>
 - title: Kostnadsfri videoutbildning
   items:
   - type: list
